# NativeChat

./: .gitignore  Dockerfile  app.config.js  app.json  docker-compose.yml  eas.json  package-lock.json  package.json  tailwind.config.js
.github/workflows/: ci.yml
android/: build.gradle  settings.gradle
android/app/: build.gradle
android/app/src/main/: AndroidManifest.xml
android/app/src/main/java/com/: potato_chip - Shortcut.lnk
android/native-signal/: build.gradle
android/native-signal/src/main/: AndroidManifest.xml
android/native-signal/src/main/cpp/: CMakeLists.txt  SignalModule.cpp  SignalModule.h  dummy_tests.c  identity_store.cpp  identity_store.h  jni_helper.h  prekey_store.cpp  prekey_store.h  protocol_store.cpp  protocol_store.h  secure_storage.cpp  secure_storage.h  sender_key_store.cpp  sender_key_store.h  session_store.cpp  session_store.h  signal_crypto_provider.cpp  signal_crypto_provider.h  signal_engine.cpp  signal_engine.h  signed_prekey_store.cpp  signed_prekey_store.h
android/native-signal/src/main/cpp/libsignal/: protocol.c  protocol.h
eas-hooks/: prebuild.js
modules/native-task/: expo-module.config.json  index.ts
modules/native-task/android/: build.gradle
modules/native-task/android/src/main/: AndroidManifest.xml
modules/native-task/ios/: NativeTask.podspec  NativeTaskModule.swift  NativeTaskView.swift
modules/native-task/src/: NativeTask.types.ts  NativeTaskModule.ts  NativeTaskModule.web.ts  NativeTaskView.tsx  NativeTaskView.web.tsx
src/app/: _layout.tsx
src/app/(auth)/: SFA-mail.tsx  _layout.tsx  sign-in.tsx  sign-up.tsx
src/app/(home)/: _layout.tsx  notifications.tsx  privacy.tsx  profile-setup.tsx  settings.tsx
src/app/(home)/(tabs)/: _layout.tsx  calls.tsx  index.tsx  status.tsx
src/app/(home)/chat/: AudioCallScreen.tsx  [id].tsx
src/app/(home)/nearby/: NearbyConnect.tsx  chat.tsx
src/app/(home)/new/: NewChat.tsx
src/components/: ChatListItem.tsx  GradualAnimation.ts  IncomingCallOverlay.tsx  MaterialTopTabs.tsx  MessageInput.tsx  MessageList.tsx  MessageListItem.tsx  TypeWriter.tsx  UserList.tsx  UserListItem.tsx
src/data/: messages.ts
src/db/: initSignalDB.ts
src/debug/: signalTest.ts
src/hooks/: useCallSignaling.ts  useChats.tsx  usePushNotifications.ts
src/lib/: supabase.ts
src/native/: signal.ts
src/providers/: CallProvider.tsx  SupabaseProvider.tsx
src/services/: backgroundNotificationTask.ts  chatService.ts  messageHandler.ts
src/store/: callStore.ts  channelListStore.ts  chatStore.ts  useKeyboardLayoutStore.ts  userStore.ts
src/types/: database.types.ts  index.ts
src/utils/: AsyncMutex.ts
supabase/: config.toml
supabase/functions/send-reply/: index.ts
supabase/functions/update-message-status/: index.ts
(+9 files in other folders)
